# cosmic_dustbox

./: .gitignore  LICENSE  README.md  metadata.py  mkdocs.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-testing.yaml  python-package.yaml
Cosmic_dustbox/: Dp.py  GrainSpecies.py  sdist.py
cosmic_dustbox/: __init__.py  crefin.py  gpop.py  gspecies.py  sdist.py
cosmic_dustbox/data/crefin/: callindex.out_CpaD03_0.01  callindex.out_CpaD03_0.10  callindex.out_CpeD03_0.01  callindex.out_CpeD03_0.10  callindex.out_silD03
cosmic_dustbox/data/sdist/: WD01-2001ApJ...548..296W-Table1.txt
cosmic_dustbox/models/MRN/: mrn.py
cosmic_dustbox/models/SGPAH/: WD01.py
cosmic_dustbox/tests/: test_crefin.py  test_sdist.py
figs/: grain-pop.tex  grain-species.tex
