[metadata]
name = cosmic_dustbox
version = 0.1.dev0
author = Martin Glatzle
author_email = findessp@yandex.ru
description = Toolbox for cosmic dust.
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/findesgh/cosmic_dustbox
long_description = file: README.md
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    numpy
    scipy
setup_requires =
    setuptools
tests_require =
    pytest
